--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    width: 100%;
+
 }
 
 .header_container {
-    height: 100%;
-    padding: 15px;
-    width: 100%;
     display: flex;
+    width: 100%;
+    position: fixed;
+    padding: 15px;
     background-color: #fff;
-    justify-content: space-around;
-    align-items: center;
+}
+
+.header_content {
+    margin: auto;
+    width: 80vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header_logo {
+    width: 10vw;
+}
+
+.header_logo h1 {
+    margin-left: 5%;
 }
 
 .nav_list {
@@ -32,6 +45,7 @@
     text-decoration: none;
     color: #dcdcdc;
     text-align: center;
+    font-size: 1.3rem;
 }
 
 .nav_item:hover .nav_item--link {
@@ -44,38 +58,140 @@
     display: none;
 }
 
+
 .banner_fluid {
     position: relative;
 }
 
 .container_banner-text {
-    color: #fff;
     position: absolute;
+    left: 3vw;
     top: 50%;
-    left: 5vw;
 }
 
-.container_banner-text h2 {
-    margin-bottom: 10px;
+.banner_title {
     font-size: 32px;
+    color: #fff
 }
 
-.container_banner-text a {
+.main_container {
+    background: url(./images/banner-fluid.png) no-repeat;
+    background-size: cover;
+    background-position-X: 80%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 70vh;
+}
+
+.section_main--intro,
+.footer_content {
+    width: 80vw;
+    margin: auto;
+}
+
+.title_main--intro {
+    color: #FFFFFF;
+    font-size: 3rem;
+}
+
+.button_main--intro {
+    text-align: initial;
+    font-size: 1em;
+    margin-top: 1vh;
+    white-space: nowrap;
+    width: 15vw;
+    height: 40px;
     text-transform: uppercase;
-    text-decoration: none;
-    font-weight: 300;
-    color: #fff;
+    font-weight: 400;
+    color: #ffff;
+    background-color: transparent;
+    border: none;
+}
+
+.button_main--intro:hover {
+    cursor: pointer;
+    border: solid #ffff;
+    border-radius: 5px;
+    text-decoration: underline;
+    transition-delay: 0.1s;
+}
+
+section.section_gallery {
+    margin: 2vh auto;
+    width: 80vw;
+}
+
+figure.figure_gallery {
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.figure_gallery img {
+    margin: 1.3vh 0;
+    max-width: 350px;
+}
+
+.figure_gallery img:hover {
+    transform: scale(1.1);
+    transition: .2s ease;
+}
+
+.footer_container {
+    padding: 30px 0;
+    background-color: #dcdcdc;
+}
+
+.footer_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* flex-wrap: wrap; */
+}
+
+ul.list_footer-social {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 25%;
+}
+
+li.item_footer--social {
+    padding: 0 10px;
+    width: 100%;
+}
+
+.footer_content--text {
+    width: 60%;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer_content--text h5 {
+    width: 20%;
+}
+
+svg {
+    width: 32px;
+    height: 32px;
 }
 
 
 /* Small Device  */
-@media (max-width: 600px) {
+@media (max-width: 792px) {
     .nav_list {
         display: none;
     }
 
     .header_nav {
         display: none;
+    }
+
+    .header_logo {
+        width: 100%;
     }
 
     .header_logo h1 {
@@ -95,15 +211,69 @@
         padding: 0;
     }
 
+    .header_content {
+        width: 100%;
+    }
+
     .menu_mobile label {
         display: flex;
         height: 6vh;
         background-repeat: no-repeat;
-        background-color: rgb(201, 201, 201);
-        background-image: url(../images/menu.ico);
+        background-color: #000;
+        background-image: url(./images/mobile.png);
         justify-content: center;
         align-items: center;
         background-position: center;
+    }
+
+    .main_container {
+        height: 70vh;
+        background-position-X: 85%;
+        justify-content: flex-end;
+    }
+
+    .section_main--intro {
+        margin: 5vh auto;
+    }
+
+    .button_main--intro {
+        width: 38vw;
+    }
+
+    .figure_gallery img:nth-child(5) {
+        order: -1;
+    }
+
+    .figure_gallery img:nth-child(11) {
+        order: -1;
+    }
+
+    .footer_content {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    ul.list_footer-social {
+        padding: 10px;
+        background-color: #7FDBD4;
+        width: 100%;
+    }
+
+    li.item_footer--social {
+        padding: 0;
+        width: 100%;
+    }
+
+    .footer_content--text {
+        margin-top: 1vh;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .footer_content--text p {
+        font-size: 11px;
+        width: 70%
     }
 
 }
